--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=9090
 application-description=@project.description@
 application-version=@project.version@
 springdoc.api-docs.path=/api-docs
