docker push registry code added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ application-description=@project.description@
 application-version=@project.version@
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.config-url=
+spring.application.name=footballdemo
